_generated-doc/3.0/config/quarkus-oidc-token-propagation-oidc-token-propagation-build-time-config.adoc

:summaryTableId: quarkus-oidc-token-propagation-oidc-token-propagation-build-time-config
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-oidc-token-propagation-oidc-token-propagation-build-time-config_configuration]]link:#quarkus-oidc-token-propagation-oidc-token-propagation-build-time-config_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-oidc-token-propagation-oidc-token-propagation-build-time-config_quarkus.oidc-token-propagation.enabled]]`link:#quarkus-oidc-token-propagation-oidc-token-propagation-build-time-config_quarkus.oidc-token-propagation.enabled[quarkus.oidc-token-propagation.enabled]`

[.description]
--
If the OIDC Token Propagation is enabled.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_TOKEN_PROPAGATION_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_TOKEN_PROPAGATION_ENABLED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`

|===